[package]
name = "arr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
clap = { version = "4.0.14", features = ["derive"] }
walkdir = "2.3.2"
nix = "0.25.0"
clap-verbosity-flag = "2.0.0"
env_logger = "0.9.1"
log = "0.4.17"
